enable course cretificate
